--- a/solver_cython.html
+++ b/solver_cython.html
@@ -11494,7 +11494,7 @@ static PyObject *__pyx_pf_13solver_cython_35max_gain_from_3_opt(CYTHON_UNUSED Py
   __pyx_t_3 = __pyx_<span class='py_c_api'>PyFloat_AsDouble</span>(__pyx_t_1); if (unlikely((__pyx_t_3 == (double)-1) &amp;&amp; <span class='py_c_api'>PyErr_Occurred</span>())) <span class='error_goto'>__PYX_ERR(0, 504, __pyx_L1_error)</span>
   <span class='pyx_macro_api'>__Pyx_DECREF</span>(__pyx_t_1); __pyx_t_1 = 0;
   __pyx_v_x2z1 = __pyx_t_3;
-</pre><pre class="cython line score-0" onclick="(function(s){s.display=s.display==='block'?'none':'block'})(this.nextElementSibling.style)">+<span class="">505</span>:     delLength = x1x2 + y1y2 + z1z2</pre>
+</pre><pre class="cython line score-0" onclick="(function(s){s.display=s.display==='block'?'none':'block'})(this.nextElementSibling.style)">+<span class="">505</span>:     cdef double delLength = x1x2 + y1y2 + z1z2</pre>
 <pre class='cython code score-0 '>  __pyx_v_delLength = ((__pyx_v_x1x2 + __pyx_v_y1y2) + __pyx_v_z1z2);
 </pre><pre class="cython line score-1" onclick="(function(s){s.display=s.display==='block'?'none':'block'})(this.nextElementSibling.style)">+<span class="">506</span>:     opt0 = (0,0)</pre>
 <pre class='cython code score-1 '>  <span class='pyx_macro_api'>__Pyx_INCREF</span>(__pyx_tuple__4);
